Replace a map with a list in DefCall arguments